--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,6 +1,14 @@
 sonar.projectKey=23Coffee_ChessJavaCodeSmell
 sonar.organization=23coffee
+sonar.language=java
+sonar.java.binaries=.
+sonar.exclusions=**/*.java
+sonar.coverage.exclusions=**/*.java
 
+
+# This is the name and version displayed in the SonarCloud UI.
+#sonar.projectName=Gemini-2023-individual
+#sonar.projectVersion=1.0
 # This is the name and version displayed in the SonarCloud UI.
 #sonar.projectName=ChessJavaCodeSmell
 #sonar.projectVersion=1.0
